# anton_core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
private/: allocator.cpp  assert.cpp  console.cpp  filesystem.cpp  format.cpp  intrusive_list.cpp  memory.cpp  ranges.cpp  stacktrace.cpp  stdio.cpp  string.cpp  string7.cpp  string7_stream.cpp  string7_view.cpp  string8_common.cpp  string_common.cpp  string_stream.cpp  string_view.cpp
private/allocator/: allocator.cpp  arena.cpp
private/linux/: filesystem.cpp  stacktrace.cpp
private/unicode/: common.cpp
private/windows/: filesystem.cpp  stacktrace.cpp
public/anton/: algorithm.hpp  aligned_buffer.hpp  allocator.hpp  array.hpp  assert.hpp  compiletime.hpp  console.hpp  diagnostic_macros.hpp  expected.hpp  filesystem.hpp  fixed_array.hpp  flat_hash_map.hpp  flat_hash_set.hpp  format.hpp  functors.hpp  ilist.hpp  intrinsics.hpp  intrusive_list.hpp  iterators.hpp  list.hpp  memory.hpp  optional.hpp  ordering.hpp  owning_ptr.hpp  pair.hpp  ranges.hpp  shared_ptr.hpp  slice.hpp  sort.hpp  stacktrace.hpp  stdio.hpp  stream.hpp  string.hpp  string7.hpp  string7_stream.hpp  string7_view.hpp  string_stream.hpp  string_utils.hpp  string_view.hpp  swap.hpp  (+7 more)
public/anton/algorithm/: sort.hpp
public/anton/detail/: crt.hpp  string8_common.hpp  string_common.hpp  swap.hpp  traits_common.hpp  traits_function.hpp  traits_properties.hpp  traits_transformations.hpp  traits_utility.hpp  tuple.hpp  utility.hpp  utility_common.hpp
public/anton/hashing/: murmurhash2.hpp
public/anton/iterators/: base.hpp  enumerate.hpp  move.hpp  range.hpp  reverse.hpp  zip.hpp
public/anton/memory/: core.hpp
public/anton/type_traits/: base.hpp  common.hpp  function.hpp  properties.hpp  transformations.hpp  utility.hpp
public/anton/unicode/: common.hpp
